k8s/infrastructure/net-policy-mariadb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mariadb-only-from-laravel
  namespace: server-hub
spec:
  podSelector:
    matchLabels:
      app: mariadb
  
  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - laravel
                  - laravel-worker

      ports:
        - protocol: TCP
          port: 3306
