k8s/infrastructure/net-policy-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-only-from-laravel
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app: redis
  
  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - laravel
                  - laravel-worker

      ports:
        - protocol: TCP
          port: 6379
